--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-# see http://about.travis-ci.org/docs/user/languages/php/ for more hints
-language: javascript
-
-
+language: node_js
+node_js:
+  - 0.8
